# trading_ai

./: .env.example  .gitignore  README.md  app.py  backtest.py  cli.py  config.py  create_db.py  data_sources.py  discovered_patterns.jsonl  discovery_pipeline.py  dockerfile  explain_patterns.py  explanations.jsonl  final_analysis.jsonl  mkdocs.yml  patterns.jsonl  prompts.py  pyproject.toml  pytest.ini  requirements.txt  test_client.py  test_connection.py  test_ibkr_connection.py.  test_model.py  utils.py  vetted_patterns.jsonl  vetting_pipeline.py
agent/: __init__.py  trading_brain.py
alerts/: __init__.py  alert_channels.py  alert_manager.py  alert_rules.py
analytics/: __init__.py  filter_attribution.py  market_regime.py  options_mispricing.py  performance_attribution.py  relative_strength.py  setup_decay.py  statistical_brain.py  strategy_diagnostics.py  timeframe_confirmation.py  trade_error_analysis.py  volume_profile.py
config/: __init__.py  runtime_readiness.py  startup_validator.py
configs/: config.yaml  strategy_repository.json
data/: live_test_aapl.csv  polygon_data_aapl.csv
data_ingest/: __init__.py  alternative_data.py  clients.py
db/: __init__.py  audit_log.py  checkpoints.py  migrations.py  schema_manager.py
diagnostics/: __init__.py  healthcheck.py  live_dry_run.py
discovery/: __init__.py  candidate_discovery.py  catalyst_models.py  catalyst_providers.py  external_catalyst_discovery.py  fallback_universe.py  source_models.py
docs/: ARCHITECTURE.md  BUILD_ROADMAP.md  CLI_REFERENCE.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SAFETY.md  index.md
engine/: __init__.py  constraint_engine.py
execution/: __init__.py  (+2 more)
(+353 files in other folders)
